Java 버전 변경 (17 -> 11) 및 가계부 전체 내역 리스트 수정